--- a/res/values-zh-rTW/aosp_arrays.xml
+++ b/res/values-zh-rTW/aosp_arrays.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2015 The JDCTeam      Licensed under the Apache License, Version 2.0 (the "License");      you may not use this file except in compliance with the License.      You may obtain a copy of the License at           http://www.apache.org/licenses/LICENSE-2.0      Unless required by applicable law or agreed to in writing, software      distributed under the License is distributed on an "AS IS" BASIS,      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.      See the License for the specific language governing permissions and      limitations under the License. -->
+<!-- Copyright (C) 2015 The JDCTeam
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+          http://www.apache.org/licenses/LICENSE-2.0
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
      <!-- Titles for window animation scale preference. [CHAR LIMIT=35] -->
@@ -87,7 +97,8 @@
         <item>2</item>
     </string-array>
 
-    <!-- Fingerprint sensor locations.  Devices should configure their sensor location using          config_fingerprintSensorLocation -->
+    <!-- Fingerprint sensor locations.  Devices should configure their sensor location using
+		 config_fingerprintSensorLocation -->
     <string-array name="security_settings_fingerprint_sensor_locations" translatable="false">
         <item>@string/security_settings_fingerprint_sensor_location_back</item>
         <item>@string/security_settings_fingerprint_sensor_location_front</item>
@@ -97,18 +108,18 @@
 
     <!-- Wi-Fi settings. Presented as a list dialog to the user to choose the Wi-Fi region code. -->
     <string-array name="wifi_countrycode_entries">
-<item>美國</item>
-<item>加拿大，台灣</item>
-<item>德國</item>
-<item>歐洲</item>
-<item>日本，俄羅斯</item>
-<item>澳大利亞</item>
-<item>中國</item>
-<item>韓國</item>
-<item>南非，土耳其</item>
-<item>以色列，新加坡</item>
-<item>巴西</item>
-<item>印度</item>
+		<item>美國</item>
+		<item>加拿大，台灣</item>
+		<item>德國</item>
+		<item>歐洲</item>
+		<item>日本，俄羅斯</item>
+		<item>澳大利亞</item>
+		<item>中國</item>
+		<item>韓國</item>
+		<item>南非，土耳其</item>
+		<item>以色列，新加坡</item>
+		<item>巴西</item>
+		<item>印度</item>
     </string-array>
 
     <string-array name="wifi_countrycode_values" translatable="false">
