--- a/res/values/translators_arrays.xml
+++ b/res/values/translators_arrays.xml
@@ -30,7 +30,7 @@
         <item>es</item>
         <item>it</item>
         <item>in</item>
-		<item>zh-rTW</item>
+		<item>zh-TW</item>
     </string-array>
 
     <!-- Github/XDA profile URL of translator -->
